<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/shape_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewAddDateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editTextUpdateDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_edit_text"
        android:paddingHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@id/textViewAddDateName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name_hint" />

    <TextView
        android:id="@+id/textViewUpdateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextUpdateDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/select_date" />

    <TextView
        android:id="@+id/textViewUpdateDateYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/editTextUpdateDateYear"
        app:layout_constraintBottom_toBottomOf="@id/editTextUpdateDateYear"
        app:layout_constraintEnd_toStartOf="@id/editTextUpdateDateYear"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="17sp"
        android:text="@string/year" />

    <EditText
        android:id="@+id/editTextUpdateDateYear"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="5"
        android:background="@drawable/shape_edit_text"
        android:paddingHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@id/textViewUpdateDate"
        app:layout_constraintStart_toEndOf="@id/textViewUpdateDateYear"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:inputType="number"
        android:hint="@string/year_hint" />

    <TextView
        android:id="@+id/textViewUpdateDateMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/editTextUpdateDateMonth"
        app:layout_constraintBottom_toBottomOf="@id/editTextUpdateDateMonth"
        app:layout_constraintEnd_toStartOf="@id/editTextUpdateDateYear"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="17sp"
        android:text="@string/month" />

    <EditText
        android:id="@+id/editTextUpdateDateMonth"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/shape_edit_text"
        android:paddingHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@id/editTextUpdateDateYear"
        app:layout_constraintStart_toStartOf="@id/editTextUpdateDateYear"
        app:layout_constraintEnd_toEndOf="@id/editTextUpdateDateYear"
        android:ems="5"
        android:layout_marginTop="2dp"
        android:inputType="number"
        android:hint="@string/month_hint"/>

    <TextView
        android:id="@+id/textViewUpdateDateDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/editTextUpdateDateDay"
        app:layout_constraintBottom_toBottomOf="@id/editTextUpdateDateDay"
        app:layout_constraintEnd_toStartOf="@id/editTextUpdateDateYear"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="17sp"
        android:text="@string/day" />

    <EditText
        android:id="@+id/editTextUpdateDateDay"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/shape_edit_text"
        android:paddingHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@id/editTextUpdateDateMonth"
        app:layout_constraintStart_toStartOf="@id/editTextUpdateDateMonth"
        app:layout_constraintEnd_toEndOf="@id/editTextUpdateDateMonth"
        android:ems="5"
        android:layout_marginTop="2dp"
        android:inputType="number"
        android:hint="@string/day_hint"/>

    <Button
        android:id="@+id/buttonUpdateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_turquoise"
        app:layout_constraintTop_toBottomOf="@id/editTextUpdateDateDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/button_update" />
</androidx.constraintlayout.widget.ConstraintLayout>